# armadillo

./: CMakeLists.txt  package.xml
include/armadillo/: driver_obj.h  lifter_obj.h
msg/: brusher_packet.msg  distance_sensor_packet.msg  driver_packet.msg  encoder_packet.msg  lifter_packet.msg  start_packet.msg
src/: .lifter.cpp.swp  brusher.cpp  distance_sensor.cpp  driver.cpp  encoder.cpp  lifter.cpp  lifter.cpp.save  navigation.cpp
src/lib/: driver_lib.cpp  lifter_lib.cpp
